<resources>
    <string name="app_name">BitGlobal</string>
    <string name="app_network_interruption_toast">Network interruption, please check your website.</string>
    <string name="main_navigation_market">Market</string>
    <string name="main_navigation_trans">Exchange</string>
    <string name="main_navigation_asset">Balances</string>
    <string name="main_navigation_user">Account</string>
    <string name="user_manage_sqsx">The authentication is invalid，please login again</string>
    <string name="user_fz">COPY</string>
    <string name="user_fzcg_toast">Copy successfully.</string>
    <string name="user_zt">Paste</string>
    <string name="user_paste">PASTE</string>
    <string name="user_ztsb_toast">No data to paste.</string>
    <string name="user_xg">Modify</string>
    <string name="user_qd">Confirm</string>
    <string name="user_qr">Confirm</string>
    <string name="user_qx">Cancel</string>
    <string name="user_tj">Submit</string>
    <string name="user_yqx">Canceled</string>
    <string name="user_pz">Take photo</string>
    <string name="user_xc">Albums</string>
    <string name="account_ky">Available:</string>
    <string name="account_dj">Freeze:</string>
    <string name="account_current_value">Current Price</string>
    <string name="account_btc">BTC</string>
    <string name="account_bitcoin">Bitcoin</string>
    <string name="account_total">Total</string>
    <string name="account_deposit">Deposit</string>
    <string name="account_withdraw">Withdraw</string>
    <string name="account_available">Available：</string>
    <string name="account_on_orders">On Orders：</string>
    <string name="account_balance">Balance</string>
    <string name="account_balance_title">Balances</string>
    <string name="account_records">Records</string>
    <string name="account_currency_choose_detail">Please sent # to the below QR code address.</string>
    <string name="account_currency_info">1.### transfer to this address will be deposited into your account after ## times confirmations.\n
2.You may pay more miner fee if you want speed up the deposit.</string>
    <string name="account_currency_copy_address">COPY ADDRESS</string>
    <string name="account_avaliable_balance">Available Balance :&#160;</string>
    <string name="account_send_all">Send All</string>
    <string name="account_currency_to">To</string>
    <string name="account_currency_amount">Amount</string>
    <string name="account_currency_amount_in">Amount in #</string>
    <string name="account_currency_amount_FEE">Fee</string>
    <string name="account_carry_coin_choose_model">— Choose Model —</string>
    <string name="account_carry_coin_alert_scan">QR Code</string>
    <string name="account_carry_coin_alert_paste">Paste</string>
    <string name="account_carry_coin_alert_address">&#160;Address</string>
    <string name="account_withdraw_title">You will withdraw ###</string>
    <string name="cancel">Cancel</string>
    <string name="trans_qb">All</string>
    <string name="trans_exchange_title">EXCHANGE</string>
    <string name="trans_exchange_avaliable">Available</string>
    <string name="trans_jy">Exchange</string>
    <string name="trans_mc">Sell</string>
    <string name="trans_qbcx">Cancel all</string>
    <string name="trans_dqwt">Orders</string>
    <string name="trans_lswt">History</string>
    <string name="trans_mywtsj">You don\'t have record.</string>
    <string name="trans_myycjwtsj">You don\'t have record.</string>
    <string name="trans_exchange_order_detail_trade_empty">No record.</string>
    <string name="trans_wgdsjl_toast">No more data.</string>
    <string name="trans_wwtsj">No data.</string>
    <string name="trans_wtcg">Entrustment Success.</string>
    <string name="trans_wtsb">Entrustment failure.</string>
    <string name="trans_cxcg">Cancel successfully.</string>
    <string name="trans_cxwt">Cancel entrustment</string>
    <string name="trans_wtxq">Entrustment Detail</string>
    <string name="trans_mo">Def</string>
    <string name="trans_mai">Buy</string>
    <string name="trans_mao">Sell</string>
    <string name="trans_buy">buy</string>
    <string name="trans_sell">sell</string>
    <string name="trans_info">you will ## @ ### at #</string>
    <string name="trans_dang">Stall</string>
    <string name="trans_he">Conbine</string>
    <string name="trans_wtjg">Price(###)</string>
    <string name="trans_cjjg">Amount(###)</string>
    <string name="trans_wtsl">Entrust amount</string>
    <string name="trans_cjsl">Transaction volume</string>
    <string name="trans_jg">Price</string>
    <string name="trans_sl">Amount</string>
    <string name="trans_dlhjxjy">Please Sign in first</string>
    <string name="trans_jye">Total Cost</string>
    <string name="trans_jyed">Total Cost:</string>
    <string name="trans_xhmr">BUY</string>
    <string name="trans_xhmc">SELL</string>
    <string name="trans_cjj">Transaction Price</string>
    <string name="trans_ma">Buy</string>
    <string name="trans_mi">Sell</string>
    <string name="trans_mad">Buy</string>
    <string name="trans_mid">Sell</string>
    <string name="trans_waiting">Waiting</string>
    <string name="avg_price">Avg.Price ：</string>
    <string name="order_price">Order.Price ：</string>
    <string name="trans_history_avg_price">Avg.Price :</string>
    <string name="trans_ky">Available</string>
    <string name="trans_kd">Worth</string>
    <string name="trans_km">Worth</string>
    <string name="trans_kmm">To Sell</string>
    <string name="trans_zzc">TotalAsset</string>
    <string name="trans_km_btc">Available BTC</string>
    <string name="trans_available">Available #:</string>
    <string name="trans_km_eth">To Sell ETH</string>
    <string name="trans_jzc">NetAsset</string>
    <string name="trans_kj">CanBorrow</string>
    <string name="trans_dj">Frozen</string>
    <string name="trans_yj">Borrowed</string>
    <string name="trans_jr">Borrow</string>
    <string name="trans_zc">Asset</string>
    <string name="trans_jd">Loan</string>
    <string name="trans_jk">Borrow</string>
    <string name="trans_cz">Deposit</string>
    <string name="trans_tx">Withdraw</string>
    <string name="trans_sb">Receive</string>
    <string name="trans_fb">Send</string>
    <string name="trans_qrmc">Confirm to sell</string>
    <string name="trans_qrmr">Confirm to buy</string>
    <string name="trans_djqr">Confirm again</string>
    <string name="trans_jg_hint">Please enter the entrustment price.</string>
    <string name="trans_sl_hint">Please enter the entrustment amount.</string>
    <string name="trans_nykqzjmmbh_hint">You have opened transaction password protection</string>
    <string name="trans_nmrjgyjj_hint">Your price is higher than current price</string>
    <string name="trans_nmcjdyjj_hint">Your price is lower than current price</string>
    <string name="trans_cxqbwt_hint">Confirm to cancel all entrustment?</string>
    <string name="trans_balance">Balances</string>
    <string name="user_register">No Account?Register now</string>
    <string name="user_dl">Login</string>
    <string name="user_zc">Sign Up</string>
    <string name="user_hysyzgbtb">Welcome to BITGLOBAL</string>
    <string name="user_kqndhzhbzl">Start Your Trip of Cryptocurrencies</string>
    <string name="user_dlzgbtb">Sign in  </string>
    <string name="user_zczgbtb">Account Register</string>
    <string name="user_aqdldcyz">Login with multiple safety verification</string>
    <string name="user_exit_title">Are you confirmed to log out?</string>
    <string name="user_exit_yes">YES</string>
    <string name="user_exit_no">NO</string>
    <string name="user_yzdl">Login verification</string>
    <string name="user_czmm">Reset Password</string>
    <string name="user_dlcg_toast">successfully login.</string>
    <string name="user_xgcg">Modify successfully.</string>
    <string name="user_ljdl">Login</string>
    <string name="user_tcdqdl">Sign Out</string>
    <string name="user_wjmm">Forgot Password</string>
    <string name="user_wjdlmm">Forgot Password</string>
    <string name="user_zhdlmm">Recover login password</string>
    <string name="user_hwsjdl">Overseas user</string>
    <string name="user_zgsjdl">China Mainland user</string>
    <string name="user_yhmyxdl">Username/Email</string>
    <string name="user_xyb">Next</string>
    <string name="user_xzzcfs">Select the way to sign up</string>
    <string name="user_xzzhfs">Select the way to recover your account</string>
    <string name="user_qhzsjhzc">Phone number</string>
    <string name="user_qhzdzyxzc">Already have account,login immediately</string>
    <string name="user_sjhzc">Sign up by phone number</string>
    <string name="user_register_by_phone">Use Mobile</string>
    <string name="user_sjzhmm">Use Mobile</string>
    <string name="user_dzyjzh">Use E-mail</string>
    <string name="user_dzyxzc">Sign up by E-mail</string>
    <string name="user_register_by_email">Use E-mail</string>
    <string name="user_yxzhmm">Recover password by E-mail</string>
    <string name="user_cxfsyj">RESEND E-MAIL</string>
    <string name="user_czcg_toast">Operate successfully.</string>
    <string name="user_czcg_google">Set successfully.</string>
    <string name="user_zcxzh">Sign Up</string>
    <string name="user_wczc">Complete sign up</string>
    <string name="user_zccg">Sign up successfully.</string>
    <string name="user_ljzc">Sign up now</string>
    <string name="user_tjyz">Next</string>
    <string name="user_zjmm_hint">Please enter transaction Password</string>
    <string name="safety_zg">China</string>
    <string name="safety_zjqd">Credentials Area</string>
    <string name="safety_zjxm">Credentials Name</string>
    <string name="safety_zjxm_hint">Please enter credentials name</string>
    <string name="safety_zjhm">Credentials Number</string>
    <string name="safety_zjhm_hint">Please enter the correct credentials number</string>
    <string name="safety_xzyh">Select Bank</string>
    <string name="safety_khyh">Bank Account</string>
    <string name="safety_yhkh">Bank Card No</string>
    <string name="safety_yhkh_hint">Please bank card No</string>
    <string name="safety_ckr">Card Holder&#160;&#160;&#160;&#160;</string>
    <string name="safety_ckr_hint">Please enter the name of card holder</string>
    <string name="safety_ylsj">The reserved phone number</string>
    <string name="safety_ylsj_hint">Please enter the reserved phone number of your bank card</string>
    <string name="safety_xzdq">Select Area</string>
    <string name="safety_szzh">Bank Branch</string>
    <string name="safety_szzh_hint">Please enter your bank branch</string>
    <string name="asset_dz">Address:</string>
    <string name="asset_bz">Remark:</string>
    <string name="asset_dz_hint">Please select the receive address or scan</string>
    <string name="asset_bz_hint">Please enter remark</string>
    <string name="asset_sjdz">Atual Receive:</string>
    <string name="asset_my">Secret Key</string>
    <string name="asset_mydh_hint">Interest-free Ticket can get from BitGlobal events or system present</string>
    <string name="asset_mxj_hint">Please enter Interest-free ticket secret key</string>
    <string name="asset_xzdh">Exchange Now</string>
    <string name="asset_bill_txje">Withdraw Amount</string>
    <string name="asset_bill_txje_hint">Please enter withdraw amount</string>
    <string name="asset_bill_skr">&#160;&#160;&#160;&#160;Payer</string>
    <string name="asset_bill_hkr">&#160;&#160;&#160;&#160;Payer</string>
    <string name="asset_bill_skr_hint">Please enter payee\'s name.</string>
    <string name="asset_bill_hkr_hint">Please enter payer\'s name</string>
    <string name="asset_recharge_czzh">Deposit Account</string>
    <string name="asset_recharge_czzh_hint">Please enter Alipay account</string>
    <string name="asset_recharge_czje">Deposit Amount</string>
    <string name="asset_recharge_czje_hint">Please enter deposit amount</string>
</resources>