<LinearLayout
    style="@style/match_match"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_main_header" />
    <LinearLayout
        style="@style/match_match_bg_color">
        <View
            android:layout_marginTop="@dimen/margin_padding_20"
            style="@style/user_safety_line"/>
        <RelativeLayout
            style="@style/rl_user_item">
            <TextView
                android:id="@+id/tv_dz"
                android:text="@string/asset_dz"
                style="@style/tv_user_item" />
            <TextView
                android:id="@+id/ed_dz"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/margin_padding_10"
                android:layout_toRightOf="@+id/tv_dz"
                android:hint="@string/asset_dz_hint"
                style="@style/tv_asset_black" />
        </RelativeLayout>
        <View
            style="@style/user_safety_line"/>
        <View
            android:layout_marginTop="@dimen/margin_padding_10"
            style="@style/user_safety_line"/>
        <RelativeLayout
            style="@style/rl_user_item">
            <TextView
                android:id="@+id/tv_bz"
                android:text="@string/asset_bz"
                style="@style/tv_user_item" />
            <EditText
                android:id="@+id/ed_bz"
                android:layout_toRightOf="@+id/tv_bz"
                android:hint="@string/asset_bz_hint"
                style="@style/ed_user_safety" />
        </RelativeLayout>
        <View
            style="@style/user_safety_line"/>
        <Button
            android:id="@+id/bnt_commit"
            android:text="@string/user_tj"
            android:background="@drawable/bnt_login"
            style="@style/but_user_safety" />
    </LinearLayout>
</LinearLayout>
